--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --port 3000",
-    "build": "vite build",
-    "serve": "vite preview --port 3000",
     "start": "gunicorn server.app:app"
   },
   "dependencies": {
@@ -25,5 +22,8 @@
     "less-loader": "^7.1.0",
     "vite": "^2.1.4",
     "vite-plugin-imp": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.15.0"
   }
 }
